{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 119,
  "lineage": "6df6ca35-918f-08ba-0bb4-b749c114a955",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bilbo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d47a93ddf71eb60f",
            "domain": "vpc",
            "id": "eipalloc-0d47a93ddf71eb60f",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-195-231-76.compute-1.amazonaws.com",
            "public_ip": "34.195.231.76",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "gollum",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c74a8ad5ce0c27bf",
            "domain": "vpc",
            "id": "eipalloc-0c74a8ad5ce0c27bf",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-227-51-86.compute-1.amazonaws.com",
            "public_ip": "3.227.51.86",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "example_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c0b74d29acd0cd97",
            "arn": "arn:aws:ec2:us-east-1:613765250426:instance/i-068fa1fcd50a213f0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-068fa1fcd50a213f0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my_key_pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07a677c87b6caf5f0",
            "private_dns": "ip-10-0-1-7.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.7",
            "public_dns": "ec2-54-197-94-159.compute-1.amazonaws.com",
            "public_ip": "54.197.94.159",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fd11be51e9f33b31",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cccbf5ba6d78ac39",
            "tags": {
              "Name": "Furiosa"
            },
            "tags_all": {
              "Name": "Furiosa"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0432808741f3607d7"
            ]
          },
          "dependencies": [
            "aws_subnet.pub_subnet_az1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "example_instance2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c0b74d29acd0cd97",
            "arn": "arn:aws:ec2:us-east-1:613765250426:instance/i-0a833f8068c8da52c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a833f8068c8da52c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my_key_pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ab5f6478f04f61c1",
            "private_dns": "ip-10-0-3-192.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.192",
            "public_dns": "ec2-54-160-70-172.compute-1.amazonaws.com",
            "public_ip": "54.160.70.172",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-017129a1a2c5ac346",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0db0733f05bff9234",
            "tags": {
              "Name": "Furiosa2"
            },
            "tags_all": {
              "Name": "Furiosa2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0432808741f3607d7"
            ]
          },
          "dependencies": [
            "aws_subnet.pub_subnet_az2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613765250426:internet-gateway/igw-068259dcdbcfe4794",
            "id": "igw-068259dcdbcfe4794",
            "owner_id": "613765250426",
            "tags": {
              "Name": "Bank-App-igw"
            },
            "tags_all": {
              "Name": "Bank-App-igw"
            },
            "vpc_id": "vpc-0a6a64110080cb46e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d47a93ddf71eb60f",
            "association_id": "eipassoc-01feda91a0ed695ee",
            "connectivity_type": "public",
            "id": "nat-0dff3859a5e88c9d4",
            "network_interface_id": "eni-093ee7f6e63d028a1",
            "private_ip": "10.0.1.43",
            "public_ip": "34.195.231.76",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0cccbf5ba6d78ac39",
            "tags": {
              "Name": "Bank-App-nat_gw_az1"
            },
            "tags_all": {
              "Name": "Bank-App-nat_gw_az1"
            }
          },
          "dependencies": [
            "aws_eip.bilbo",
            "aws_subnet.pub_subnet_az1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "mordor",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c74a8ad5ce0c27bf",
            "association_id": "eipassoc-0233e9c7204db3492",
            "connectivity_type": "public",
            "id": "nat-008855cfed8ba1173",
            "network_interface_id": "eni-0ec7d7d71ddedb5e1",
            "private_ip": "10.0.3.53",
            "public_ip": "3.227.51.86",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0db0733f05bff9234",
            "tags": {
              "Name": "Bank-App-nat_gw_az2"
            },
            "tags_all": {
              "Name": "Bank-App-nat_gw_az2"
            }
          },
          "dependencies": [
            "aws_eip.gollum",
            "aws_subnet.pub_subnet_az2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "example_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613765250426:route-table/rtb-0f8bf5e64462784c3",
            "id": "rtb-0f8bf5e64462784c3",
            "owner_id": "613765250426",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-068259dcdbcfe4794",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "versatile-route-table"
            },
            "tags_all": {
              "Name": "versatile-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6a64110080cb46e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613765250426:security-group/sg-0a57a72de233b457e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a57a72de233b457e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vilgefortz-security-group",
            "name_prefix": "",
            "owner_id": "613765250426",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vilgefortz-security-group"
            },
            "tags_all": {
              "Name": "vilgefortz-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6a64110080cb46e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613765250426:subnet/subnet-0e6c68b24281728c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e6c68b24281728c2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "613765250426",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Bank-App-pri_subnet_az1"
            },
            "tags_all": {
              "Name": "Bank-App-pri_subnet_az1"
            },
            "vpc_id": "vpc-0a6a64110080cb46e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613765250426:subnet/subnet-0c1c2d06c1fc24db5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1c2d06c1fc24db5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "613765250426",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Bank-App-pri_subnet_az2"
            },
            "tags_all": {
              "Name": "Bank-App-pri_subnet_az2"
            },
            "vpc_id": "vpc-0a6a64110080cb46e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613765250426:subnet/subnet-0cccbf5ba6d78ac39",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cccbf5ba6d78ac39",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "613765250426",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Bank-App-pub_subnet_az1"
            },
            "tags_all": {
              "Name": "Bank-App-pub_subnet_az1"
            },
            "vpc_id": "vpc-0a6a64110080cb46e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613765250426:subnet/subnet-0db0733f05bff9234",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db0733f05bff9234",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "613765250426",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Bank-App-pub_subnet_az2"
            },
            "tags_all": {
              "Name": "Bank-App-pub_subnet_az2"
            },
            "vpc_id": "vpc-0a6a64110080cb46e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613765250426:vpc/vpc-0a6a64110080cb46e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06af31a12aaa3f304",
            "default_route_table_id": "rtb-0c22774d25950c9eb",
            "default_security_group_id": "sg-0432808741f3607d7",
            "dhcp_options_id": "dopt-0e1f9a44d58123fef",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a6a64110080cb46e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c22774d25950c9eb",
            "owner_id": "613765250426",
            "tags": {
              "Name": "Bank-App-vpc"
            },
            "tags_all": {
              "Name": "Bank-App-vpc"
            }
          }
        }
      ]
    }
  ]
}